# fastai

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/: config.py  dependencies.py  main.py  mocks.py
src/models/: sites.py  users.py
src/routers/: sites.py  users.py
